# imgman

./: README.md  manager.py  pyproject.toml  requirements.txt
src/imgman/: __init__.py  config.py  imgman.py  manager.py
tests/: run_tests  test_manager.py
